# VoxelSmith

./: .gitignore  Cargo.toml  ClassDiagram1.cd  README.md  Test2.vxsProject  Test2vxsProject  TestBarrier.vxsProject  VoxelSmith.csproj  VoxelSmith.csproj.old  VoxelSmith.sln  ates.vxsProject  dafsdf.vxsProject  export_presets.cfg  icon.svg.import  project.godot
Assets/Art/: test.mtl
Assets/Resources/: PaletteButtonGroup.tres
Assets/Scenes/: CompassWorld.tres  SnappingPoint.tres  SnappingPoint.tscn  VoxelHighlight.tscn  World.tscn  chunk.tscn  compass_view.tscn  main.tscn  player.tscn  voxel_highlight.tscn
Assets/Scripts/: GammaToggle.cs  GammaToggle.cs.uid  Voxel.cs  WorldController.cs  WorldController.cs.uid
Properties/: launchSettings.json
VoxelSmithGodot/: .gitignore  export_presets.cfg  project.godot
VoxelSmithGodot/Art/: Ground.tres  house.obj.import
VoxelSmithGodot/Scenes/: Player.gd  Voxel.tscn  World.tscn  WorldUI.tscn  mai87FD.tmp  main.tscn  player.tscn
VoxelSmithGodot/Scripts/: FirstPersonCamera.cs  Main.cs  NodeExtensions.cs  PlayerController.cs  PlayerMovement.cs  VoxelPlacer.cs  WorldController.cs
VoxelSmithRust/: Cargo.toml  README.md
VoxelSmithRust/src/: app.rs  main.rs  obj_generation.rs
mesh_generator_rust/: Cargo.toml
resources/: DarkOakTree1.schem  house_schem_data.json  rock_schem_data.json  small_medieval_house.schematic
resources/schematic_json/: tree.json  wall.json
src/: app.rs  main.rs  mesh_generation.rs  obj_generation.rs  schematic.rs
voxel_smith_rust/: Cargo.toml
voxel_smith_rust/src/: lib.rs
(+417 files in other folders)
