[package]
name = "voxel_smith_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2"
fastanvil = "0.31"
serde = "1.0.195"
flate2 = "1.0.28"
obj-rs = "0.7.1"
egui = "0.25.0"
eframe = "0.25.0"
egui_extras = "0.25.0"
